Harden SBK-GEM orchestration lifecycle
Signed-off-by: Keshava Munegowda <keshava.gowda@gmail.com>